fix header and footer alignment for phone

--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
   padding: 0 auto;
   overflow-x: hidden;
   background: #292d41;
+  background-image: url("./icons/Group1-1.svg");
+  background-repeat: no-repeat;
 }
 
 /* header */
@@ -57,48 +59,19 @@ body {
   right: 8rem;
   cursor: pointer;
 }
-.header_intro {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.header {
+  height: 60vh;
 }
 .header_intro {
-  width: 175.684rem;
-  height: 70.2rem;
-  background-image: url("./icons/Group1-1.svg");
-  background-repeat: no-repeat;
+  width: 80%;
+  margin-top: 20rem;
+  text-align: center;
 }
-.hero {
-  width: 100vw;
-  margin-left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.header_hero_p_wrapper {
+  width: 65%;
+  margin-top: 1.5rem;
 }
 .header_hero_h {
-  width: 77rem;
-  height: 8.8rem;
   font-family: Helvetica Neue;
   font-weight: bold;
   font-size: 7.2rem;
@@ -106,10 +79,8 @@ body {
   color: #ffffff;
 }
 .header_hero_p {
-  width: 69.1rem;
-  height: 11.6rem;
   font-family: Helvetica Neue;
-  font-weight: normal;
+  font-weight: 300;
   font-size: 2.4rem;
   line-height: 2.9rem;
   text-align: center;
@@ -314,21 +285,13 @@ body {
   text-decoration: none;
 }
 .footer_contact {
-  margin-right: 8rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
 }
-.footer_logo_container,
-.footer_contact_social_media {
-  margin: 0;
-}
+
 .footer_contact_social_media {
   text-align: center;
   width: 35rem;
+  margin-right: 10rem;
 }
 .contact_us {
   font-style: normal;
@@ -339,16 +302,23 @@ body {
   color: #fbfbfb;
 }
 .footer_logo_container {
-  margin-left: 8rem;
+  margin-left: 7rem;
+}
+.footer_logo_wrap {
+  display: inline-flex;
+}
+.footer_logo_txt_wrap {
+  width: 50%;
+  margin: 0;
+  margin-left: 4rem;
+  margin-top: -2.3rem;
 }
 .footer_logo {
   width: 2.896rem;
   height: 6rem;
 }
 .footer_h {
-  position: relative;
-  top: -6.3rem;
-  left: 4rem;
+  margin-left: 1rem;
   font-style: normal;
   font-weight: 500;
   font-size: 3.2rem;
@@ -356,16 +326,11 @@ body {
   color: #f8c751;
 }
 .footer_logo_txt {
-  width: 43.4rem;
-  height: 8.7rem;
   font-style: normal;
   font-weight: normal;
   font-size: 2.4rem;
   line-height: 2.9rem;
   color: #9aa1b8;
-  position: relative;
-  top: -4rem;
-  left: 4rem;
 }
 .footer_social_media {
   display: -webkit-box;
@@ -388,10 +353,10 @@ body {
 }
 .footer_copyright {
   margin-bottom: 7rem;
+  margin-top: 2rem;
   font-style: normal;
   font-weight: normal;
   font-size: 2rem;
-  line-height: 2.4rem;
   /* identical to box height */
   text-align: center;
   color: #9aa1b8;
@@ -427,6 +392,9 @@ body {
   }
 }
 @media only screen and (max-width: 1050px) {
+  .header_hero_h {
+    font-size: 6rem;
+  }
   .footer_contact_social_media {
     width: 35rem;
   }
@@ -439,9 +407,6 @@ body {
     margin-left: 4rem;
   }
   .about_grid_container {
-    margin-left: 4rem;
-  }
-  .footer_logo_container {
     margin-left: 4rem;
   }
   .our_service_container {
@@ -464,6 +429,9 @@ body {
   }
 }
 @media only screen and (max-width: 850px) {
+  .header_hero_p_wrapper {
+    width: 80%;
+  }
   .about_grid_container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -525,32 +493,16 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    margin-right: 0;
+    text-align: center;
   }
   .footer_logo_container {
-    width: 50rem;
-    position: relative;
-    left: 50%;
-    -webkit-transform: translateX(-25rem);
-    -ms-transform: translateX(-25rem);
-    transform: translateX(-25rem);
+    margin: 0;
   }
-
-  .footer_logo_txt_mob {
-    display: block;
-    width: 100%;
-    height: 8.7rem;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 2.4rem;
-    line-height: 2.9rem;
-    color: #9aa1b8;
+  .footer_logo_txt_wrap {
     text-align: center;
-    padding: 0 4rem;
-    margin-top: -2rem;
-  }
-  .footer_logo_txt {
-    display: none;
+    width: 90%;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
   }
   .footer_contact_social_media {
     width: 100%;
@@ -567,13 +519,17 @@ body {
   html {
     font-size: 45%;
   }
+  .header {
+    height: 50vh;
+  }
+  .header_hero_p_wrapper {
+    width: 80%;
+  }
 }
 @media only screen and (max-width: 600px) {
   .header_hero_h {
-    font-size: 6rem;
+    font-size: 5.5rem;
     text-align: center;
-    padding: 0 3rem;
-    left: 0;
   }
   .who_we_are_h {
     font-size: 2.8rem;
@@ -584,14 +540,13 @@ body {
 }
 @media only screen and (max-width: 550px) {
   .header_hero_h {
-    font-size: 5rem;
+    font-size: 4.8rem;
     width: 100%;
     margin: 0;
     padding: 0;
   }
-  .header_hero_p {
-    width: 50rem;
-    height: 18rem;
+  .header_intro {
+    width: 90%;
   }
   .footer_box {
     text-align: center;
@@ -602,6 +557,9 @@ body {
   .center_icon {
     padding: 6rem;
   }
+  .footer_logo_txt {
+    margin-right: 4rem;
+  }
 }
 
 @media only screen and (max-width: 450px) {
@@ -609,14 +567,10 @@ body {
     display: none;
   }
   .header_hero_h {
-    font-size: 4rem;
+    font-size: 4.5rem;
   }
-  .footer_logo_txt_mob {
-    height: 11rem;
-  }
-  .header_hero_p {
-    padding: 0 5rem;
-    height: 22rem;
+  .header_intro {
+    width: 100%;
   }
 }
 
@@ -624,9 +578,11 @@ body {
   html {
     font-size: 40%;
   }
+  .header {
+    height: 40vh;
+  }
   .header_hero_h {
-    padding: 0 4rem;
-    font-size: 3rem;
+    font-size: 4rem;
   }
   .header_hero_p {
     padding: 0 1rem;
